--- a/learn-about-me/views/login.pug
+++ b/learn-about-me/views/login.pug
@@ -1,7 +1,7 @@
 extends base.pug
 
 block body
-  form(method="post", action="/signup")
+  form(method="post", action="/login")
     .form-group
       label(for="username") Username
       input.form-control#username(type="text" name="username"
