--- a/learn-about-me/views/header.pug
+++ b/learn-about-me/views/header.pug
@@ -5,7 +5,7 @@
 
     ul.nav.navbar-nav.navbar-right
       if currentUser
-        li Hello, #{currentUser.name()}
+        li: a(href="/edit") Hello, #{currentUser.name()}
         li: a(href="/logout") Log Out
       else
         li: a(href="/login") Log In
